[gd_scene load_steps=8 format=3 uid="uid://du0fwtx53xudu"]

[ext_resource type="Script" path="res://src/appdata/popup.gd" id="1_xxlyu"]
[ext_resource type="Texture2D" uid="uid://dmk1201koe4nx" path="res://src/appdata/code1Maz`e.png" id="2_noogb"]
[ext_resource type="Texture2D" uid="uid://51mt5ow1ylin" path="res://src/appdata/codeCheetSheet.png" id="3_33hyb"]
[ext_resource type="Texture2D" uid="uid://dprw3a1kk12pg" path="res://assets/cheetsheetlvl2.png" id="4_w8fv1"]
[ext_resource type="FontFile" uid="uid://dxxefdx78tvkr" path="res://assets/TT Chocolates Trial Bold.otf" id="5_fm4me"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ihmy4"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.678431, 0.0392157, 0.352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1crfk"]
content_margin_top = 27.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Popup" type="Popup"]
process_mode = 3
size = Vector2i(1153, 648)
visible = true
script = ExtResource("1_xxlyu")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CodeToSolve" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.21
offset_top = -50.0
offset_right = 247.21
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_noogb")
expand_mode = 3

[node name="CheetSheet" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -273.958
offset_top = -37.5
offset_right = -61.0
offset_bottom = 49.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_33hyb")
expand_mode = 3

[node name="CheetSheetLvl2" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -222.0
offset_top = 82.0
offset_right = -116.0
offset_bottom = 282.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_w8fv1")
expand_mode = 1

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -248.0
offset_right = 104.0
offset_bottom = -217.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_fm4me")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ihmy4")
placeholder_text = "Press here to enter your answer!"
alignment = 1
max_length = 4
expand_to_text_length = true
caret_blink = true

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.5
offset_top = 100.0
offset_right = 240.5
offset_bottom = 127.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.823529, 0.0745098, 0.45098, 1)
theme_override_fonts/font = ExtResource("5_fm4me")
theme_override_font_sizes/font_size = 34
text = "Based on the code on the right suggest an answer for the locked door!"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -237.0
offset_top = 26.5
offset_right = -103.0
offset_bottom = 87.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.823529, 0.0745098, 0.45098, 1)
theme_override_fonts/font = ExtResource("5_fm4me")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_1crfk")
text = "Cheet Sheet"

[node name="TextureButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0

[node name="CheatSheetLvl3" type="TextureRect" parent="Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_submitted" from="Control/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Control/TextureButton" to="." method="_on_texture_button_pressed"]
